--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "caver-js": "^1.6.4",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {},
